@@ -13,7 +13,7 @@
 class API_V1_Routes {
 
 public:
-    API_V1_Routes(std::shared_ptr<crow::App<crow::CORSHandler, ElapsedTime, Authentication, Authorization, Search, DataIntegrity, XRequest>> app, std::shared_ptr<UserController> userController, std::shared_ptr<PatientController> patientController);
+    API_V1_Routes(std::shared_ptr<crow::App<crow::CORSHandler, ElapsedTime, Authentication, Authorization, XRequest, Search, DataIntegrity>> app, std::shared_ptr<UserController> userController, std::shared_ptr<PatientController> patientController);
 
 private:
 };
